[package]
authors = ["Bogdan Arabadzhi <bogdan.today@gmail.com>"]
name = "binpatch"
description = "Simple hex binary patcher library"
version = "0.1.0"

documentation = "https://docs.rs/binpatch"
homepage = "https://github.com/hiseni/binpatch"
repository = "https://github.com/hiseni/binpatch"

keywords = ["binary", "patch", "hex", "patcher"]
categories = ["encoding", "filesystem", "text-processing"]

license = "MIT"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[badges]
travis-ci = { repository = "https://github.com/hiseni/binpatch", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
data-encoding = "2.0.0-rc.2"
clippy = { version = "0.0.168", optional = true }

[features]
default = []
